logo y textos de mundo verde

--- a/invoice.html
+++ b/invoice.html
@@ -40,14 +40,14 @@
 		<meta name="msapplication-TileColor" content="#ffffff" />
 		<meta name="msapplication-TileImage" content="./assets/images/logo/ms/ms-icon-144.png" />
 		<meta name="theme-color" content="#ffffff" />    
-		<meta name="description" content="Transporte Ejecutivo Mty" />
+		<meta name="description" content="Mundo Verde" />
 		<link rel="apple-touch-icon" href="./assets/images/logo/ios/ios-icon-192.png" />
 		<!--
 manifest.json provides metadata used when your web app is installed on a
 user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
 -->
 		<link rel="manifest" href="./manifest.json" />    
-		<title>Transporte Ejecutivo Mty</title>     
+		<title>Mundo Verde</title>     
 		<!-- POLO stylesheets & fonts -->
 		<link href="./assets/templates/polo/css/plugins.css" rel="stylesheet">
 		<link href="./assets/templates/polo/css/style.css" rel="stylesheet">
@@ -346,7 +346,7 @@ user's mobile device or desktop. See https://developers.google.com/web/fundament
 								<span lang="es" data-lang-token="invoiceAttendanceText1">
 									Si prefieres asistencia adicional para generar tu factura por favor envíanos un correo a
 								</span>
-								<b><a href="mailto:facturacion@transporte-ejecutivo.mx" class="app-p-link" target="_blank" rel="noopener">facturacion@transporte-ejecutivo.mx</a></b>
+								<b><a href="mailto:facturacion@stmv.mx" class="app-p-link" target="_blank" rel="noopener">facturacion@stmv.mx</a></b>
 								<span lang="es" data-lang-token="invoiceAttendanceText2">
 									con:
 								</span>
